Fix line btn container wrap and tooltip line height

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6499,6 +6499,8 @@ form button:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .line-btn {
