--- a/public/stylesheets/partials/_line-container.scss
+++ b/public/stylesheets/partials/_line-container.scss
@@ -18,6 +18,7 @@
 
 .line-btn-container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .line-btn {
